--- a/To-Do-List/To-Do-List.html
+++ b/To-Do-List/To-Do-List.html
@@ -28,7 +28,7 @@
             </div>    
             
             <!-- Creating List -->
-            <div class = "row gy-5">
+            <div class = "row gy-5 mb-3">
                 <div class = "col-lg-11 col-10">
                     <label for  = "inputList" style = "display: none;"></label>
                     <input type = "text" id = "inputList"  placeholder = "Create your list by typing">                    
