Updated Form Background

--- a/Currency-Converter/Currency-Converter.html
+++ b/Currency-Converter/Currency-Converter.html
@@ -10,8 +10,8 @@
     </head>
     <body id = "body">
         <!-- Header Section -->
-        <header class = "container m-3 h1" id = "banner">
-            <span style = "display: inline-block;">Currency Exchange Center</span>            
+        <header class = "m-3 h1" id = "banner">
+            <span style = "display: inline-block;" class = "text-center">Currency Converter</span>            
         </header>
 
         <div class = "row m-3 p-3 container-fluid">
